fixed left align title for phones.

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ section.colored-section{
     position : static;
     transform: rotate(0);
   }
-  #title{
-    text-align: center;
+  #title .container-fluid{
+    text-align : center;
   }
 }
